// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tests for the search component. compontent snapshots big search 1`] = `
<div>
  <section
    aria-label="Big search component"
  >
    <form
      class="usa-search usa-search--big"
      role="search"
    >
      <label
        class="usa-sr-only"
        for="search-field-en-big"
      >
        search
      </label>
      <input
        class="usa-input"
        data-testid="search"
        id="search-field-en-big"
        name="search"
        type="search"
        value="initial"
      />
      <button
        class="usa-button padding-y-0 padding-x-2"
        type="button"
      >
        <span
          class="usa-search__submit-text"
        >
          Search 
        </span>
        <img
          alt="Search"
          class="usa-search__submit-icon"
          src="/assets/img/usa-icons-bg/search--white.svg"
        />
      </button>
    </form>
  </section>
</div>
`;

exports[`Tests for the search component. compontent snapshots default search 1`] = `
<div>
  <section
    aria-label="Search component"
  >
    <form
      class="usa-search"
      role="search"
    >
      <label
        class="usa-sr-only"
        for="search-field"
      >
        Search Click Here
      </label>
      <input
        class="usa-input"
        data-testid="search"
        id="search-field"
        name="search"
        type="search"
        value=""
      />
      <button
        class="usa-button  padding-y-0 padding-x-2"
        type="button"
      >
        <span
          class="usa-search__submit-text"
        >
          Search 
        </span>
        <img
          alt="Search"
          class="usa-search__submit-icon"
          src="/assets/img/usa-icons-bg/search--white.svg"
        />
      </button>
    </form>
  </section>
</div>
`;

exports[`Tests for the search component. compontent snapshots small disabled search 1`] = `
<div>
  <section
    aria-label="Small search component"
  >
    <form
      class="usa-search usa-search--small"
      role="search"
    >
      <label
        class="usa-sr-only"
        for="search-field-en-small"
      >
        Click Me
      </label>
      <input
        class="usa-input"
        data-testid="search"
        disabled=""
        id="search-field-en-small"
        name="search"
        placeholder="placeholder"
        type="search"
        value=""
      />
      <button
        class="usa-button padding-y-0 padding-x-2"
        type="button"
      >
        <img
          alt="Search"
          class="usa-search__submit-icon"
          src="/assets/img/usa-icons-bg/search--white.svg"
        />
      </button>
    </form>
  </section>
</div>
`;
